--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "cors": "^2.8.5"  // Added cors as a dependency
   }
 }
